Adjust accordion to collapse correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,9 +29,9 @@ h2 {
 .container {
     background-color: var(--white);
     margin-top: 5%;
-    margin-left: 25%;
     display: flex;
     justify-content: center;
+    justify-self: center;
     width: 100%;
     min-width: 500px;
     max-width: 600px;
@@ -66,7 +66,7 @@ h2 {
 .ans-btn {
     display: block;
     justify-self: center;
-    width: 100wh;
+    width: 100%;
     padding: 15px;
     margin: 15px;
     border: 2px solid var(--primary-color);
@@ -88,7 +88,6 @@ h2 {
 
 .start-btn {
     justify-content: center;
-    width: 100wh;
     padding: 15px;
     margin: 15px;
     border-radius: 3rem;
@@ -110,37 +109,42 @@ h2 {
 }
 
 /*MEDIA QUERIES*/
-@media (max-width: 480px)
+@media (max-width: 480px) {
   h1 {
     font-size: 2.2rem;
   }
 
   .container {
     max-width: 90%;
+    display: flex;
+    justify-self: center;
   }
 
   button {
     padding: 10px 20px;
     font-size: 1rem;
   }
-  
+}
+
 /*Large mobile devices*/
-@media (min-width: 480px) and (max-width: 767px)
+@media (min-width: 480px) and (max-width: 767px) {
   h1 {
     font-size: 2.5rem;
   }
 
   .container {
     max-width: 80%;
+    margin: 10% 2% 0 2%;
   }
 
   button {
     padding: 15px 30px;
     font-size: 1.2rem;
   }
+}
 
 /*Tablets*/
-@media (min-width: 768px) and (max-width: 1023px)
+@media (min-width: 768px) and (max-width: 1023px) {
   h1 {
     font-size: 3rem;
   }
@@ -157,22 +161,24 @@ h2 {
   span {
     width: 30%;
   }
+}
 
   /*Large Desktops/TV*/
-@media (min-width: 768px) and (max-width: 1023px)
-h1 {
-  font-size: 4rem;
-}
+@media (min-width: 768px) and (max-width: 1023px) {
+   h1 {
+     font-size: 4rem;
+   }
 
-.container {
-  max-width: 60%;
-}
+   .container {
+     max-width: 60%;
+   }
 
-button {
-  padding: 25px 50px;
-  font-size: 1.8rem;
-}
+   button {
+     padding: 25px 50px;
+     font-size: 1.8rem;
+   }
 
-span {
-  width: 20%;
+   span {
+     width: 20%;
+   }
 }
